// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack \`I18nSafeMangleExportsPlugin\`: Webpack build error 1`] = `null`;

exports[`Webpack \`I18nSafeMangleExportsPlugin\`: Webpack build files 1`] = `
[
  "control.js",
  "plugin.js",
]
`;

exports[`Webpack \`I18nSafeMangleExportsPlugin\`: Webpack build stats 1`] = `
{
  "children": [
    {
      "errors": [],
      "name": undefined,
      "warnings": [],
    },
    {
      "errors": [],
      "name": undefined,
      "warnings": [],
    },
  ],
  "errors": [],
  "warnings": [],
}
`;

exports[`Webpack \`basic-test\`: Webpack build error 1`] = `null`;

exports[`Webpack \`basic-test\`: Webpack build files 1`] = `
[
  "main.asset.php",
  "main.js",
]
`;

exports[`Webpack \`basic-test\`: Webpack build stats 1`] = `
{
  "errors": [],
  "warnings": [],
}
`;

exports[`Webpack \`complex-test\`: Webpack build error 1`] = `null`;

exports[`Webpack \`complex-test\`: Webpack build files 1`] = `
[
  "async.js",
  "css.asset.php",
  "css.css",
  "css.js",
  "css.rtl.css",
  "main.asset.php",
  "main.js",
]
`;

exports[`Webpack \`complex-test\`: Webpack build stats 1`] = `
{
  "errors": [],
  "warnings": [],
}
`;

exports[`Webpack \`concatenated-modules\`: Webpack build error 1`] = `null`;

exports[`Webpack \`concatenated-modules\`: Webpack build files 1`] = `
[
  "main.asset.php",
  "main.js",
]
`;

exports[`Webpack \`concatenated-modules\`: Webpack build stats 1`] = `
{
  "errors": [
    {
      "message": "main.js: Translator comments have gone missing for "A"
 - Translators: A",
    },
    {
      "message": "main.js: Translator comments have gone missing for "B"
 - Translators: B",
    },
  ],
  "warnings": [],
}
`;

exports[`Webpack \`known-problems\`: Webpack build error 1`] = `null`;

exports[`Webpack \`known-problems\`: Webpack build files 1`] = `
[
  "main.asset.php",
  "main.js",
]
`;

exports[`Webpack \`known-problems\`: Webpack build stats 1`] = `
{
  "errors": [
    {
      "message": "main.js: Translator comments have gone missing for "The comment will be lost when the assignment is merged into the above const" (context "context")
 - Translators: This comment will be lost",
    },
    {
      "message": "main.js: Translator comments have gone missing for "This is another workaround" (context "context")
 - Translators: This comment will be in the source but not detected for the right message.",
    },
  ],
  "warnings": [],
}
`;

exports[`Webpack \`multiple-domains\`: Webpack build error 1`] = `null`;

exports[`Webpack \`multiple-domains\`: Webpack build files 1`] = `
[
  "main.asset.php",
  "main.js",
]
`;

exports[`Webpack \`multiple-domains\`: Webpack build stats 1`] = `
{
  "errors": [
    {
      "message": "main.js: Multiple textdomains are used: "domain1", "domain2"
You may want to use @automattic/babel-plugin-replace-textdomain to fix that.",
    },
  ],
  "warnings": [],
}
`;

exports[`Webpack \`options-filter\`: Webpack build error 1`] = `null`;

exports[`Webpack \`options-filter\`: Webpack build files 1`] = `
[
  "array/main.asset.php",
  "array/main.js",
  "function/main.asset.php",
  "function/main.js",
  "regex/main.asset.php",
  "regex/main.js",
  "string/main.asset.php",
  "string/main.js",
  "undefined/main.asset.php",
  "undefined/main.js",
]
`;

exports[`Webpack \`options-filter\`: Webpack build stats 1`] = `
{
  "children": [
    {
      "errors": [],
      "name": "string",
      "warnings": [],
    },
    {
      "errors": [],
      "name": "regex",
      "warnings": [],
    },
    {
      "errors": [],
      "name": "function",
      "warnings": [],
    },
    {
      "errors": [],
      "name": "array",
      "warnings": [],
    },
    {
      "errors": [],
      "name": "undefined",
      "warnings": [],
    },
  ],
  "errors": [],
  "warnings": [],
}
`;

exports[`Webpack \`options-warnOnly\`: Webpack build error 1`] = `null`;

exports[`Webpack \`options-warnOnly\`: Webpack build files 1`] = `
[
  "main.asset.php",
  "main.js",
]
`;

exports[`Webpack \`options-warnOnly\`: Webpack build stats 1`] = `
{
  "errors": [],
  "warnings": [],
}
`;

exports[`Webpack \`pruned-branches\`: Webpack build error 1`] = `null`;

exports[`Webpack \`pruned-branches\`: Webpack build files 1`] = `
[
  "main.asset.php",
  "main.js",
]
`;

exports[`Webpack \`pruned-branches\`: Webpack build stats 1`] = `
{
  "errors": [
    {
      "message": "main.js: Optimization seems to have broken the following translation strings:
 - "another thing"",
    },
  ],
  "warnings": [],
}
`;
